@@ -330,7 +330,7 @@
 			    <configuration>
 			        <forkCount>1</forkCount>
 			        <reuseForks>true</reuseForks>
-			        <argLine>-Xmx2048m -XX:MaxPermSize=256m</argLine>
+			        <argLine>-Xmx2g</argLine>
 			    </configuration>
 			  </plugin>
 		</plugins>
